Added appointment code description
