# php/api/private/v1/appointment/getClinicResources.php
@@ -11,37 +11,40 @@ $dbh = Database::getOrmsConnection();
 
 #get the list of possible appointments and their resources
 $queryClinicResources = $dbh->prepare("
-    SELECT DISTINCT
-        MV.Resource,
-        MV.ResourceDescription
+    SELECT
+        ResourceCode,
+        ResourceName
     FROM
-        MediVisitAppointmentList MV
-        INNER JOIN ClinicResources ON ClinicResources.ClinicResourcesSerNum = MV.ClinicResourcesSerNum
-            AND ClinicResources.Speciality = :spec
-    ORDER BY MV.ResourceDescription
+        ClinicResources
+    WHERE
+        Speciality = :spec
+    ORDER BY ResourceName
 ");
 $queryClinicResources->execute([":spec" => $speciality]);
 
 $resources = array_map(function($x) {
     return [
-        "code"          => $x["Resource"],
-        "description"   => $x["ResourceDescription"]
+        "code"          => $x["ResourceCode"],
+        "description"   => $x["ResourceName"]
     ];
 },$queryClinicResources->fetchAll());
 
 $queryAppointmentCodes = $dbh->prepare("
-    SELECT DISTINCT
-        MV.AppointmentCode
+    SELECT
+        AppointmentCode,
+        AppointmentCodeDescription
     FROM
-        MediVisitAppointmentList MV
-    INNER JOIN ClinicResources ON ClinicResources.ClinicResourcesSerNum = MV.ClinicResourcesSerNum
-        AND ClinicResources.Speciality = :spec
-    ORDER BY MV.AppointmentCode
+        AppointmentCode
+    WHERE
+        Speciality = :spec
 ");
 $queryAppointmentCodes->execute([":spec" => $speciality]);
 
 $appointments = array_map(function($x) {
-    return $x["AppointmentCode"];
+    return [
+        "code"          => $x["AppointmentCode"],
+        "description"   => $x["AppointmentCodeDescription"]
+    ];
 },$queryAppointmentCodes->fetchAll());
 
 echo json_encode([
